[package]
authors = ["Brian Smith <brian@briansmith.org>"]
description = "Benchmarks of Rust crypto libraries."
name = "crypto_bench"
version = "0.1.0"

[lib]
name = "crypto_bench"
path = "crypto_bench.rs"

# Ensure that the bench, release, and test settings are the same.

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
